--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "type-fest": "^4.40.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
