--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "9.30.1",
+    "eslint-config-next": "15.3.4",
     "prisma": "^6.11.0",
     "tailwindcss": "^4",
     "typescript": "^5"
