--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "next-themes": "^0.4.6",
