--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-     "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,10 +28,10 @@
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^17.0.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.0.1",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
