--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-table": "^8.21.2",
+    "@yudiel/react-qr-scanner": "^2.3.1",
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,7 +41,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -48,7 +48,8 @@
     "tailwindcss-animate": "^1.0.7",
     "type-fest": "^4.40.1",
     "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zxing": "^0.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
