--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "bingo-dashboard",
+  "name": "nebib-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
-  "dependencies": {
+  "dependencies": {    
     "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.11.1",
@@ -17,7 +17,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.2", 
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
