--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
-  "dependencies": {    
+  "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.11.1",
@@ -17,7 +17,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.2", 
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -29,7 +29,7 @@
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-table": "^8.21.2",
     "@yudiel/react-qr-scanner": "^2.3.1",
-    "better-auth": "^1.2.3",
+    "better-auth": "1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
