--- a/package.json
+++ b/package.json
@@ -52,15 +52,16 @@
     "zxing": "^0.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "9.30.1",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.4.49",
     "prisma": "^6.11.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
