fix: move TypeScript to dependencies and update amplify.yml for AWS compatibility

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm install
+        - npx prisma generate
     build:
       commands:
         - npm run build
