--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "type-fest": "^4.40.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2",
-    "zxing": "^0.1.2"
+    "zxing": "^0.1.2",
+    "typescript": "^5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -60,7 +61,6 @@
     "eslint-config-next": "15.3.4",
     "postcss": "^8.4.49",
     "prisma": "^6.11.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.17"
   }
 }
