--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "typescript": "^5",
     "uuid": "^11.1.0",
     "zod": "^3.24.2",
-    "zxing": "^0.1.2"
+    "zxing": "^0.1.2",
+    "@types/node": "^20.19.8",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   },
   "devDependencies": {
-    "@types/node": "^20.19.8",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "9.30.1",
     "eslint-config-next": "15.3.4",
     "postcss": "^8.4.49",
